[package]
name = "caverr"
version = "0.1.0"
edition = "2021"
authors = ["Łukasz Wojtów <lukasz.wojtow@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
caverr-lib = {path = "../caverr-lib"}
console-subscriber = "0.1"
jemallocator = "0.5"
lazy_static = "1.4"
tokio = {version = "1.20", features = ["full"]}

[dev-dependencies]
rusty-hook = "0.11"