[package]
name = "caverr-lib"
version = "0.1.0"
edition = "2021"
authors = ["Łukasz Wojtów <lukasz.wojtow@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"
rsa = "0.6"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
tokio = {version = "1.20", features = ["full"]}

[dev-dependencies]
rusty-hook = "0.11"
tempfile = "3.3"